@@ -66,6 +66,11 @@ Changes since 2.1.3
     arguments.
 30. demo/pager.c: args swapped in call to memset (Dave Jones
     davej at redhat)
+31. src/slstring.c: Move last used string in the hash table to the top
+    if it is more than a few deep.
+32. slsh/doc/tm/slsh.1: Added a small section to the slsh man page
+    about customizing the readline environment.
+33. slsh/etc/slsh.rc: changed dir_exists from static to private
 
 {{{ Previous Versions
 
